--- a/options.html
+++ b/options.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-<title>View some Sparcets!</title>
-<style type="text/css">
-  div.h { display: none; }
-  div.s { display: block; margin: 800px; }
-  body { min-width:510px; }
-</style>
+  <title>Sparcet Options Page</title>
+
 
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
@@ -20,16 +16,30 @@
     <a class="logo" href="http://www.sparcet.com"><img src="img/sparcet-logo.png" alt="Sparcet! - The peer recognition app." /></a>
   </nav>
 </header>
-<div class="sparcets">
-  this is outside of the result
-  <div class="result">
 
-    <ul class="sparcet-list"></ul>
-  </div>
-</div>
-<div class="test">
-  <button>Press me</button>
-</div>
+<div id="main" class="sparcets">
+  <h1>Favorite Color</h1>
+  08
+  <select id="color">
+    09
+    <option value="blue">Blue</option>
+    10
+    <option value="red">Red</option>
+    11
+    <option value="green">Green</option>
+    12
+    <option value="yellow">Yellow</option>
+    13
+  </select>
+  14
+  <br />
+  15
+  <button onclick="saveOptions()">Save</button>
+  16
+  <br />
+  17
+  <button onclick="eraseOptions()">Restore default</button>
+
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
