--- a/options.html
+++ b/options.html
@@ -18,27 +18,15 @@
 </header>
 
 <div id="main" class="sparcets">
-  <h1>Favorite Color</h1>
-  08
-  <select id="color">
-    09
-    <option value="blue">Blue</option>
-    10
-    <option value="red">Red</option>
-    11
-    <option value="green">Green</option>
-    12
-    <option value="yellow">Yellow</option>
-    13
-  </select>
-  14
-  <br />
-  15
-  <button onclick="saveOptions()">Save</button>
-  16
-  <br />
-  17
-  <button onclick="eraseOptions()">Restore default</button>
+  <div class="main-content">
+  <h1>Options</h1>
+
+    <form action="">
+    <p>Name of Your Organization: <input type="text" placeholder="name" /> </p>
+      <p>Number of Sparcets to List: <input type="text" placeholder="number" /> </p>
+    </form>
+    </div>
+</div>
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
