--- a/popup.html
+++ b/popup.html
@@ -2,11 +2,6 @@
 <html lang="en-us">
 <head>
 <title>View some Sparcets!</title>
-<style type="text/css">
-  div.h { display: none; }
-  div.s { display: block; margin: 800px; }
-  body { min-width:510px; }
-</style>
 
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/plugins.js"></script>
@@ -16,22 +11,16 @@
 </head>
 <body>
 <header id="global-header" role="banner">
-  <nav role="navigation">
-    <a class="logo" href="http://www.sparcet.com"><img src="img/sparcet-logo.png" alt="Sparcet! - The peer recognition app." /></a>
-  </nav>
-</header>
-<div class="sparcets">
-  this is outside of the result
-  <div class="result">
 
+    <img class="logo" src="img/sparcet-logo.png" alt="Sparcet! - The peer recognition app." />
+
+</header>
+<div class="main-header">
+  <h1>What's up at SPARC</h1>
+</div>
+  <div class="result">
     <ul class="sparcet-list"></ul>
   </div>
-</div>
-<div class="test">
-  <button>Press me</button>
-</div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/libs/jquery.min.js"><\/script>')</script>
 </body>
 </html>
