disclaimer on non operational options page

--- a/options.html
+++ b/options.html
@@ -21,6 +21,7 @@
   <div class="main-content">
   <h1>Options</h1>
 
+    <p>This page isn't working yet.</p>
     <form action="">
     <p>Name of Your Organization: <input type="text" placeholder="name" /> </p>
       <p>Number of Sparcets to List: <input type="text" placeholder="number" /> </p>
