--- a/popup.html
+++ b/popup.html
@@ -16,7 +16,7 @@
 
 </header>
 <div class="main-header">
-  <h1>What's up at SPARC</h1>
+  <h1 class="org">What's going on...</h1>
 </div>
   <div class="result">
     <ul class="sparcet-list"></ul>
