--- a/options.html
+++ b/options.html
@@ -6,6 +6,7 @@
 
   <script src="js/lib/jquery.min.js"></script>
   <script src="js/application.js"></script>
+  <script src="js/plugins.js"></script>
   <link rel="stylesheet" media="screen" href="css/styles.css" />
 
 </head>
@@ -21,7 +22,7 @@
   <h1>Options</h1>
 
 
-    <p>Name of Your Organization: <input type="text" id="tenant_choice" placeholder="yourOrganization.sparcet.com" /> </p>
+    <p>Name of Your Organization: <input type="text" id="tenant_choice" placeholder="Your Organization" />.sparcet.com </p>
       <p>Number of Sparcets to List: <input id="num_sparcets"  type="text" placeholder="number of sparcets" /> </p>
 
     <div id="status"></div>
