some js cleanup and added some text while loading sparcets, esp important if user wants >100 sparcets

--- a/popup.html
+++ b/popup.html
@@ -17,8 +17,12 @@
 <div class="main-header">
   <h1 class="org">What's going on...</h1>
 </div>
+
   <div class="result">
-    <ul class="sparcet-list"></ul>
+
+    <ul class="sparcet-list">
+      <div id="ajaxloader">Loading Recent Sparcets...</div>
+    </ul>
   </div>
 
 </body>
